@@ -1,0 +1,23 @@
+language: python
+cache: pip
+matrix:
+  include:
+  - python: '2.7'
+  - python: '3.5'
+  - python: '3.6'
+  - python: '3.7'
+  - python: '3.8'
+  - python: '3.9'
+  - python: '3.10'
+  - python: 'nightly'
+  - python: 'pypy'
+  - python: 'pypy3'
+install:
+  - pip install codecov
+  - pip install -r requirements.txt
+  - pip install -e .
+script:
+  - PYTHONPATH=.:$PYTHONPATH python tests/__main__.py
+after_success:
+  - PYTHONPATH=.:$PYTHONPATH coverage run --omit=*test* tests/__main__.py
+  - codecov
