@@ -15,7 +15,8 @@ Revision 0.4.1, released XX-XX-2022
 - Improve the test for RFC6486
 - Improve the test for RFC9174
 - Update the copyright lines for 2022
-- Improve RFC3709 to enforce WITH CPMPONENTS constraints
+- Improve RFC3709 to enforce WITH COMPONENTS constraints
+- Add Python 3.9 and Python 3.10 to travis.yml
 
 Revision 0.4.0, released 10-07-2021
 -----------------------------------
